static_resources/css/site.css
/* Check and delete styles that conflict in custom.css*/

body {
	padding-top: 40px;
    background-color: #f5f5f5;
    background-image: url("/static/images/whitey.png");
}

.placeholder {
	color: #999;
}

#jump-top {
	position: fixed;
	right: 10px;
	bottom: 10px;
	margin: 0;
	cursor: pointer;
}

#content-container {
	margin-left: 0;
}

#team-nav {
	word-wrap: break-word;
}

abbr.timeago {
	border: none;
	cursor: default;
	color: #666;
}

.avatar-container {
	width: 75px;
	height: 100%;
	display: inline-block;
	position: absolute;
	overflow: hidden;
}

.post-message {
	margin-left: 80px;
}

.comment .avatar-container {
	margin-left: 75px;
}

.comment-message {
	margin-left: 160px;
}

.brand {
	text-align: left;
}

.loading-spinner {
    background: rgba(255,255,255,0.5) url('/static/images/ajax-loader.gif') no-repeat center center;
    height: 100%;
    width: 100%;
    top: 0;
}

.avatar-container {
	z-index: 1;
	background-color: white;
}

.post .avatar {
	margin-right: 5px;
	min-height: 200px;
	min-width: 200px;
}

.loading-spinner-container {
    position: relative;
}

.spacing-right {
	margin-right: 10px;
}

.span2 .well {
	padding: 5px;
}

#self-identity {
	margin-right: 30px;
}

.container-fluid {
	display: inline-block;
	text-align: left;
}

.navbar-inner .container {
    max-width: 1000px;
    margin: 0 auto;
}

.navbar .avatar {
    margin-top: -5px;
}

.post {
	background-color: white;
	border-bottom: 1px solid #EEE;
	word-wrap: break-word;
	margin: 0px;
	position: relative;
	min-height: 75px;
}

.post-message {
	word-wrap: break-word;
}

.comment {
	border-top: 1px solid #EEE;
	margin: 0px;
	word-wrap: break-word;
	position: relative;
	min-height: 75px;
}

.comment-form {
	margin: 0;
}

.comment-form input[type="text"] {
	width: 50%;
}

#footer {
	font-size: 9pt;
	padding: 0 3px;
}

textarea {
    height: 100px;
	margin: 0;
    resize: none;
}

.hero-unit {
	text-align: left;
	margin-bottom: 0px;
    padding: 9px 19px 9px;
    background-color: #fff;
    border: 1px solid #e5e5e5;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
       -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
            box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
    font-size: 14px;
}

.form-signin ul.errorlist {
	margin: 0;
	padding: 0 0 0 15px;
	list-style: none;
}

.container-narrow {
    margin: 0 auto;
    max-width: 1000px;
}

.modal form {
	margin: 0;
}

